[package]
authors = ["Mark Simulacrum <mark.simulacrum@gmail.com>"]
name = "release-triage"
license = "MIT/Apache-2.0"
version = "0.1.0"

[dependencies]
petgraph = "0.4.10"
serde = "1"
serde_derive = "1"
serde_json = "1"
csv = "1.0.0-beta.5"
env_logger = "0.5"
error-chain = "0.11.0"
futures = "0.1.14"
log = "0.4"
tokio-core = "0.1.8"
hyper = "0.11.0"
dotenv = "0.11"
hyper-tls = "0.1.2"

[dependencies.semver]
features = ["serde"]
version = "0.9"

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dependencies.reqwest]
features = ["unstable"]
version = "0.8"
